# ParallelProgrammingExam

BoidsProject/: CMakeLists.txt  main.cpp  main_parallel.cpp  main_parallel.h
